<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sort_rating"
        android:title="Sort by Rating" />
    <item
        android:id="@+id/sort_year"
        android:title="Sort by Year" />
    <item
        android:id="@+id/sort_cost"
        android:title="Sort by Cost" />
</menu>